--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Finance Home<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="finance.html">My Portfolio<span class="sr-only">(current)</span></a>
@@ -62,6 +62,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="services.html">Services</a>
                 </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="news.html">News</a>
+                    </li>
             </ul>
         </div>
     </nav>
@@ -78,20 +81,20 @@
 
             <div class="row d-flex flex-row">
                 <div class="col-lg">
-                    <h4 style="padding-top: 2em;">Finance News</h4>
+                    <h3 style="padding-top: 2em;">Finance News</h3>
                 </div>
             </div>
 
             <div class="row d-flex flex-row">
 
-                <div class="col-sm">
+                <div class="col-sm shrink">
                     <div class="card h-100">
                         <div class="card-img" style="text-align:center;padding-top: 1em;"><img src="photos/pexels-photo-938963.jpeg" class="card-img"></div>
                         <div class="card-body">
                             <small style="text-align: left; line-height: 1; margin-bottom: 0;">August 8, 2018</small>
                             <h5 class="card-title">Stock Values in 2018</h5>
                             <p class="card-text">Changes in the economy have caused people to change the way they are using the stock market. Are millenials doomed? This article talks about the stocks that millenials aren't buying anymore.</p>
-                            <p style="text-align: right; text-decoration: underline; "><a href="#">Read Article</a></p>
+                            <p style="text-align: right; text-decoration: underline; "><a href="news.html#2018aug8">Read Article</a></p>
                         </div>
                     </div>
                 </div>
@@ -104,22 +107,22 @@
                         <div class="row d-flex flex-row">
                             <!-- Row A of thumbnail section -->
 
-                            <div class="col-lg d-flex flex-column">
+                            <div class="col-lg d-flex flex-column shrink">
                                 <!-- column A of row A -->
                                 <div class="card h-100">
                                     <div class="card-body">
 
                                         <small style="text-align: left; line-height: 1; margin-bottom: 0;">August 7, 2018</small>
-                                        <h5 class="card-title" style="line-height: 1; padding-bottom: 0;">Are you Losing Money?</h5>
+                                        <h5 class="card-title" style="line-height: 1; padding-bottom: 0;">Are You Losing Money?</h5>
                                         <div class="card-img" style="text-align:center;">
                                             <img src="photos/pexels-photo-462383.jpeg" class="card-img">
                                         </div>
 
-                                        <p style="text-align: right; text-decoration: underline; "><a href="#">Read Article</a></p>
+                                        <p style="text-align: right; text-decoration: underline; "><a href="news.html#2018aug7">Read Article</a></p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg d-flex flex-column">
+                            <div class="col-lg d-flex flex-column shrink">
                                 <!-- column B or row A -->
                                 <div class="card h-100">
                                     <div class="card-body">
@@ -130,7 +133,7 @@
                                             <img src="photos/gold-ingots-golden-treasure-47047.jpeg" class="card-img">
                                         </div>
 
-                                        <p style="text-align: right; text-decoration: underline; "><a href="#">Read Article</a></p>
+                                        <p style="text-align: right; text-decoration: underline; "><a href="news.html#2018aug6">Read Article</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -139,7 +142,7 @@
                         <div class="row d-flex flex-row">
                             <!-- row b of thumbnail section -->
 
-                            <div class="col-lg d-flex flex-column">
+                            <div class="col-lg d-flex flex-column shrink">
                                 <!-- column a of row b -->
                                 <div class="card h-100">
                                     <div class="card-body">
@@ -148,11 +151,11 @@
                                         <div class="card-img" style="text-align:center;">
                                             <img src="photos/pexels-photo-442577.jpeg" class="card-img">
                                         </div>
-                                        <p style="text-align: right; text-decoration: underline; "><a href="#">Read Article</a></p>
+                                        <p style="text-align: right; text-decoration: underline; "><a href="news.html#2018aug5">Read Article</a></p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg d-flex flex-column">
+                            <div class="col-lg d-flex flex-column shrink">
                                 <!-- column B or row A -->
                                 <div class="card h-100">
                                     <div class="card-body">
@@ -161,7 +164,7 @@
                                         <div class="card-img" style="text-align:center;">
                                             <img src="photos/pexels-photo-209449.jpeg" class="card-img">
                                         </div>
-                                        <p style="text-align: right; text-decoration: underline; "><a href="#">Read Article</a></p>
+                                        <p style="text-align: right; text-decoration: underline; "><a href="news.html#2018aug4">Read Article</a></p>
                                     </div>
                                     <!-- /card-body -->
                                 </div>
@@ -189,13 +192,13 @@
     <div class="container-fluid" id="services" style="margin-top: 2em;">
         <div class="container">
             <div class="row">
-                <h4>Our Services</h4>
+                <h3 class="services-title">Our Services</h3>
             </div>
             <div class="row">
                 <div class="card-deck">
                     <a href="services.html">
                         <div class="card">
-                            <div class="card-img" style="text-align:center; padding-top: 1em;"><i class="zoom far fa-credit-card fa-5x"></i></div>
+                            <div class="card-img" style="text-align:center; padding-top: 1em;"><i class=" far fa-credit-card fa-5x"></i></div>
                             <div class="card-body">
                                 <h5 class="card-title">Credit and Loans</h5>
                                 <p class="card-text">We offer a variety of loan options including credit cards, student loans, personal loans and more. Additionally, we offer credit advice and credit checks. Click here to find out more.</p>
@@ -205,7 +208,7 @@
                     </div>
                     <a href="services.html">
                         <div class="card">
-                            <div class="card-img;" style="text-align:center;padding-top: 1em;"><i class="far fa-money-bill-alt fa-5x zoom"></i></div>
+                            <div class="card-img;" style="text-align:center;padding-top: 1em;"><i class="far fa-money-bill-alt fa-5x "></i></div>
                             <div class="card-body">
                                 <h5 class="card-title">Bank Accounts</h5>
                                 <p class="card-text">We offer a variety of easy to use banking services loaded with incentives to invest. Click here to find out which account type will best fit your lifestyle and needs.</p>
@@ -215,7 +218,7 @@
                     </div>
                     <a href="services.html">
                         <div class="card">
-                            <div class="card-img;" style="text-align:center;padding-top: 1em;"><i class="fas fa-exchange-alt fa-5x zoom"></i></div>
+                            <div class="card-img;" style="text-align:center;padding-top: 1em;"><i class="fas fa-exchange-alt fa-5x"></i></div>
                             <div class="card-body">
                                 <h5 class="card-title">Investment Advice</h5>
                                 <p class="card-text">Whether you are planning your retirement or expanding your wealth, our certified financial advisors are committed to providing you with the best expertise in the industry.</p>
