fixed the shrink on news box and made news thumbnails into links. Fixed active navbar

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="finance.html">My Portfolio</a>
                 </li>
                 <li class="nav-item">
@@ -87,7 +87,7 @@
 
             <div class="row d-flex flex-row">
 
-                <div class="col-sm shrink">
+                <div class="col-sm">
                     <div class="card h-100">
                         <div class="card-img" style="text-align:center;padding-top: 1em;"><img src="photos/pexels-photo-938963.jpeg" class="card-img"></div>
                         <div class="card-body">
@@ -109,7 +109,7 @@
 
                             <div class="col-lg d-flex flex-column shrink">
                                 <!-- column A of row A -->
-                                <div class="card h-100">
+                                <a href="news.html#2018aug7"><div class="card h-100">
                                     <div class="card-body">
 
                                         <small style="text-align: left; line-height: 1; margin-bottom: 0;">August 7, 2018</small>
@@ -118,13 +118,13 @@
                                             <img src="photos/pexels-photo-462383.jpeg" class="card-img">
                                         </div>
 
-                                        <p style="text-align: right; text-decoration: underline; "><a href="news.html#2018aug7">Read Article</a></p>
+                                        <p style="text-align: right; text-decoration: underline; ">Read Article</a></p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg d-flex flex-column shrink">
                                 <!-- column B or row A -->
-                                <div class="card h-100">
+                                <a href="news.html#2018aug6"><div class="card h-100">
                                     <div class="card-body">
 
                                         <small style="text-align: left; line-height: 1; margin-bottom: 0;">August 6, 2018</small>
@@ -133,7 +133,7 @@
                                             <img src="photos/gold-ingots-golden-treasure-47047.jpeg" class="card-img">
                                         </div>
 
-                                        <p style="text-align: right; text-decoration: underline; "><a href="news.html#2018aug6">Read Article</a></p>
+                                        <p style="text-align: right; text-decoration: underline; ">Read Article</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -144,27 +144,27 @@
 
                             <div class="col-lg d-flex flex-column shrink">
                                 <!-- column a of row b -->
-                                <div class="card h-100">
+                                <a href="news.html#2018aug5"><div class="card h-100">
                                     <div class="card-body">
                                         <small style="text-align: left; line-height: 1; margin-bottom: 0;">August 5, 2018</small>
                                         <h5 class="card-title" style="line-height: 1; padding-bottom: 0;">The Cost of Environmental Protections</h5>
                                         <div class="card-img" style="text-align:center;">
                                             <img src="photos/pexels-photo-442577.jpeg" class="card-img">
                                         </div>
-                                        <p style="text-align: right; text-decoration: underline; "><a href="news.html#2018aug5">Read Article</a></p>
+                                        <p style="text-align: right; text-decoration: underline; ">Read Article</a></p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg d-flex flex-column shrink">
                                 <!-- column B or row A -->
-                                <div class="card h-100">
+                                <a href="news.html#2018aug4"><div class="card h-100">
                                     <div class="card-body">
                                         <small style="text-align: left; line-height: 1; margin-bottom: 0;">August 4, 2018</small>
                                         <h5 class="card-title" style="line-height: 1; padding-bottom: 0;">Fruit-Named Tech Companies</h5>
                                         <div class="card-img" style="text-align:center;">
                                             <img src="photos/pexels-photo-209449.jpeg" class="card-img">
                                         </div>
-                                        <p style="text-align: right; text-decoration: underline; "><a href="news.html#2018aug4">Read Article</a></p>
+                                        <p style="text-align: right; text-decoration: underline; ">Read Article</a></p>
                                     </div>
                                     <!-- /card-body -->
                                 </div>
