--- a/index.html
+++ b/index.html
@@ -196,31 +196,32 @@
             </div>
             <div class="row">
                 <div class="card-deck">
-                    <a href="services.html">
+                    <a href="services.html" class="purple">
                         <div class="card">
                             <div class="card-img" style="text-align:center; padding-top: 1em;"><i class=" far fa-credit-card fa-5x"></i></div>
                             <div class="card-body">
-                                <h5 class="card-title">Credit and Loans</h5>
+                                <h5 class="card-title strong">Credit and Loans</h5>
                                 <p class="card-text">We offer a variety of loan options including credit cards, student loans, personal loans and more. Additionally, we offer credit advice and credit checks. Click here to find out more.</p>
 
                             </div>
                     </a>
                     </div>
-                    <a href="services.html">
+                    <a href="services.html" class="purple">
                         <div class="card">
-                            <div class="card-img;" style="text-align:center;padding-top: 1em;"><i class="far fa-money-bill-alt fa-5x "></i></div>
+                            <div class="card-img;" style="text-align:center;padding-top: 1em;"><i class="far fa-money-bill-alt fa-5x"></i></div>
                             <div class="card-body">
-                                <h5 class="card-title">Bank Accounts</h5>
+                               <h5 class="card-title strong">Bank Accounts</h5>
                                 <p class="card-text">We offer a variety of easy to use banking services loaded with incentives to invest. Click here to find out which account type will best fit your lifestyle and needs.</p>
+                                 </div>
 
                     </a>
+                   
                     </div>
-                    </div>
-                    <a href="services.html">
+                    <a href="services.html" class="purple">
                         <div class="card">
                             <div class="card-img;" style="text-align:center;padding-top: 1em;"><i class="fas fa-exchange-alt fa-5x"></i></div>
                             <div class="card-body">
-                                <h5 class="card-title">Investment Advice</h5>
+                                <h5 class="card-title strong">Investment Advice</h5>
                                 <p class="card-text">Whether you are planning your retirement or expanding your wealth, our certified financial advisors are committed to providing you with the best expertise in the industry.</p>
                             </div>
                     </a>
